# murgamu

./: .gitignore  .rustfmt.toml  Cargo.toml  LITTLE_NIGHTMARE.md  README.md  REQUEST_LIFECYCLE.md  TODO.md  a.md  candle.ans
art/: base.ans  name.ans  router.ans
art/papirus/: bottom.ans  left.ans
cli/: .rustfmt.toml  Cargo.toml  build.rs
cli/src/: main.rs
cli/src/commands/: clean_command.rs  dev_command.rs  ensure_watch_command.rs  mod.rs  new_command.rs  new_fmt_command.rs
cli/src/generators/: mod.rs  project_generator.rs
cli/src/templates/: app_controller_template.rs  app_mod_content_template.rs  app_service_template.rs  auth_guard_template.rs  auth_mod_template.rs  auth_pipe_template.rs  cargo_template.rs  formatter_template.rs  main_template.rs  mod.rs  models_mod_template.rs  mods_mod_template.rs  token_jwt_template.rs  token_mod_template.rs  token_models_mod_template.rs  token_service_template.rs  user_props_template.rs  users_mod_template.rs  users_role_template.rs
cli/template_sources/src/: basic_main.rs  full_main.rs  starter_main.rs
cli/template_sources/src/mods/: full_mod.rs  mod.rs
cli/template_sources/src/mods/app/: app_service.rs  full_controller.rs  full_mod.rs  mod.rs  starter_controller.rs  starter_mod.rs  starter_service.rs
cli/template_sources/src/mods/auth/: guard.rs
cli/template_sources/src/mods/token/: full_mod.rs  full_service.rs
cli/template_sources/src/mods/token/models/: jwt.rs
cli/template_sources/src/mods/users/: full_mod.rs
macros/: Cargo.toml
macros/src/: derive.rs  guard.rs  guards.rs  injectable.rs  interceptor.rs  lib.rs  main_entry.rs  module.rs  pipe.rs  response.rs  service.rs  types.rs  use_pipe.rs
macros/src/controller/: controller_impl.rs  generate_handler.rs  get_base_path.rs  methods.rs  mod.rs
macros/src/core/: analyze_parameter.rs  extract_arc_inner.rs  extract_generic_type.rs  extract_option_inner.rs  gen_constructor.rs  gen_deps_impl.rs  has_self.rs  implments_impl_mur_dependencies.rs  implments_struct_mur_dependencies.rs  infer_inject_from_field.rs  is_constructor.rs  mod.rs  normalize_manual_inject.rs  normalize_path.rs  require_self_params.rs  to_snake_case.rs
macros/src/service/: generate_service_impl.rs  mod.rs  service_impl.rs
macros/src/utils/: analyze_parameter.rs  mod.rs
sandbox/: .rustfmt.toml  Cargo.toml
src/: lib.rs
src/config/: mod.rs
tests/: public_api.rs  server_integration.rs  stability.rs
(+367 files in other folders)
