[package]
name = "mur"
version = "0.1.4"
edition = "2024"
description = "Command line tool for Murgamü"
repository = "https://github.com/etieppo/murgamu"
license = "LGPL-3.0-or-later"
keywords = ["framework", "http", "nestjs", "server", "web"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "mur"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
