[package]
name = "murgamu-macros"
version = "0.5.0"
edition = "2021"
description = "Procedural macros for Murgamü"
repository = "https://github.com/etieppo/murgamu"
license = "LGPL-3.0-or-later"
keywords = ["framework", "http", "nestjs", "server", "web"]
categories = ["asynchronous", "web-programming", "web-programming::http-server"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
